# libfuzzer-dynamoRIO

./: CMakeLists.txt
dynamoRIO/: CMakeLists.txt  HONGGFUZZ.REPORT.TXT  drtracelib.cpp
dynamoRIO/DynamoRIO-Linux-7.1.0-1/bin32/: drconfig  drconfig.debug  drinject  drinject.debug  drloader  drloader.debug  drrun  drrun.debug  nudgeunix  nudgeunix.debug
dynamoRIO/DynamoRIO-Linux-7.1.0-1/bin64/: drconfig  drconfig.debug  drinject  drinject.debug  drloader  drloader.debug  drrun  drrun.debug  nudgeunix  nudgeunix.debug
dynamoRIO/DynamoRIO-Linux-7.1.0-1/cmake/: DynamoRIOConfig.cmake  DynamoRIOConfigVersion.cmake  DynamoRIOTarget32-debug.cmake  DynamoRIOTarget32-relwithdebinfo.cmake  DynamoRIOTarget32.cmake  DynamoRIOTarget64-debug.cmake  DynamoRIOTarget64-relwithdebinfo.cmake  DynamoRIOTarget64.cmake  cpp2asm_defines.h
dynamoRIO/DynamoRIO-Linux-7.1.0-1/docs/html/: API_BT.html  API_samples.html  API_tutorial.html  API_tutorial_annotation1.html  API_tutorial_annotation2.html  API_tutorial_annotation3.html  API_tutorial_annotation4.html  API_tutorial_annotation5.html  API_tutorial_annotation6.html  API_tutorial_annotation7.html  API_tutorial_bbdynsize1.html  API_tutorial_bbdynsize2.html  API_tutorial_bbdynsize3.html  API_tutorial_bbdynsize4.html  API_tutorial_bbdynsize5.html  API_tutorial_bbdynsize6.html  API_tutorial_bbdynsize7.html  API_tutorial_bbdynsize8.html  API_tutorial_bbdynsize9.html  API_tutorial_prefetch1.html  API_tutorial_steal_reg1.html  annotated.html  annotated_dup.js  basic__counts__create_8h.html  cache__simulator__create_8h.html  classanalysis__tool__t.html  classanalyzer__t.html  classbytesize__t.html  classdrgui__options__interface__t.html  classdrgui__tool__interface__t.html  classdroption__parser__t.html  classdroption__t.html  classdroption__t.js  classes.html  classmodule__mapper__t.html  classmodule__mapper__t.js  classraw2trace__t.html  classtrace__converter__t.html  classtrace__converter__t.js  deprecated.html  (+362 more)
dynamoRIO/DynamoRIO-Linux-7.1.0-1/drmemory/bin64/: drltrace  drmemory  symquery
dynamoRIO/DynamoRIO-Linux-7.1.0-1/drmemory/drmf/: DrMemoryFrameworkConfigVersion.cmake
dynamoRIO/DynamoRIO-Linux-7.1.0-1/dynamorio/bin32/: drrun  (+2 more)
dynamoRIO/DynamoRIO-Linux-7.1.0-1/samples/: CMakeLists.txt
dynamoRIO/DynamoRIO-Linux-7.1.0-1/tools/: list32  list64
dynamoRIO/hongg_instrument/: honggfuzz.h  instrument.c  instrument.h
dynamoRIO/hongg_instrument/libhfcommon/: log.h  util.h
libfuzzer/: CMakeLists.txt  FuzzerDefs.h  FuzzerDriver.cpp  FuzzerExtFunctionsWeak.cpp  FuzzerLoop.cpp  FuzzerMain.cpp  FuzzerMutate.cpp  FuzzerTracePC.cpp  FuzzerTracePC.h
(+390 files in other folders)
